# terminal-contrastive-rl

./: .gitignore  AGENT_NODE_SCRATCHPAD.md  CONTRASTIVE_LOSS_GUIDE.md  bash_agent.py  bash_agent_tc.toml  bash_agent_tc_research.md  config.py  local_bash_env.py  test_contrastive_loss.py  trainer.py
environments/code_mbpp/: code_mbpp.py  pyproject.toml
paper/: vpo_main.tex
results/: aide_base.json  aide_healthy.json  aide_k5.json  bestk_base.json  bestk_base_nodeset.json  bestk_corr_s1_nodeset.json  bestk_corrdir_s1_nodeset.json  bestk_corrdir_s2_nodeset.json  bestk_corrdir_s4_nodeset.json  bestk_corrdir_s6_nodeset.json  bestk_corrdir_s7_nodeset.json  bestk_corrdir_s8_nodeset.json  bestk_corrdir_s9_nodeset.json  bestk_corrfixed_s10_nodeset.json  bestk_corrfixed_s1_nodeset.json  bestk_corrfixed_s7_nodeset.json  bestk_corrmgda_s1_nodeset.json  bestk_corrmgda_s3_nodeset.json  bestk_corrmgda_s4_nodeset.json  bestk_corrmgda_s5_nodeset.json  bestk_corrmgda_s6_nodeset.json  bestk_corrmgda_s8_nodeset.json  bestk_corrmgda_s9_nodeset.json  bestk_coverage_s10_nodeset.json  bestk_coverage_s1_nodeset.json  bestk_coverage_s2_nodeset.json  bestk_coverage_s8_nodeset.json  bestk_ctrl.json  bestk_ctrl_s1_nodeset.json  bestk_ctrl_s2_nodeset.json  bestk_exp19d.json  bestk_k5_nodeset.json  bestk_k5_s1_nodeset.json  bestk_k5step100_nodeset.json  bestk_k5step140_nodeset.json  bestk_k5step160_nodeset.json  bestk_k5step200_nodeset.json  bestk_mgda_s2_nodeset.json  bestk_mrpo.json  corr_table_k5.tex  (+3 more)
scripts/: aggregate_seeds.py  aide.sbatch  aide_search.py  analyze_reward_correlation.py  (+23 more)
(+210 files in other folders)
