[project]
name = "code_mbpp"
version = "0.1.0"
description = "MBPP code-generation environment with a multi-axis rubric"
requires-python = ">=3.10"
dependencies = ["verifiers>=0.1.5", "datasets"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
include = ["code_mbpp.py", "pyproject.toml"]
